<resources>
    <string name="app_name">BG PROJECT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="welcome">Welcome</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm-Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="recruitment_and_registration_of_tgls">Recruitment and Registration of TGLs</string>
    <string name="tgls_information">TGLs Information</string>
    <string name="conduct_tests">Conduct Tests</string>
    <string name="conduct_interviews">Conduct Interviews</string>
    <string name="register_and_setup_trust_groups">Register and Setup Trust Groups</string>
    <string name="full_name_first_amp_last"><![CDATA[Full Name (First & Last)]]></string>
    <string name="b_v_n">BVN</string>
    <string name="n_i_n">NIN</string>
    <string name="phone_number">Phone Number</string>
    <string name="d_o_b">Date of Birth</string>
    <string name="state_of_origin">State of Origin</string>
    <string name="government_id_type">Government Identification Type</string>
    <string name="government_id">Government Identification ID</string>
    <string name="government_image">Government Identification Image</string>
    <string name="l_g_a">Local Government Area</string>
    <string name="hub">Hub</string>
    <string name="sex">Sex</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="tgl_registration_form">TGL REGISTRATION FORM</string>
    <string name="edit">Edit</string>
    <string name="schedule">Schedule For Test</string>
    <string name="result">Result</string>
    <string name="take_test">Take Test</string>
    <string-array name="Sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="idType">
        <item>Driver\'s License</item>
        <item>International Passport</item>
        <item>Permanent Voter\'s Card (PVC)</item>
        <item>National Identification Number (NIN)</item>
    </string-array>
    <string-array name="State">
        <item>Abia</item>
        <item>Adamawa</item>
        <item>Akwa Ibom</item>
        <item>Anambra</item>
        <item>Bauchi</item>
        <item>Bayelsa</item>
        <item>Benue</item>
        <item>Borno</item>
        <item>Cross River</item>
        <item>Delta</item>
        <item>Ebonyi</item>
        <item>Edo</item>
        <item>Ekiti</item>
        <item>Enugu</item>
        <item>Gombe</item>
        <item>Imo</item>
        <item>Jigawa</item>
        <item>Kaduna</item>
        <item>Kano</item>
        <item>Katsina</item>
        <item>Kebbi</item>
        <item>Kogi</item>
        <item>Kwara</item>
        <item>Lagos</item>
        <item>Nasarawa</item>
        <item>Niger</item>
        <item>Ogun</item>
        <item>Ondo</item>
        <item>Osun</item>
        <item>Oyo</item>
        <item>Plateau</item>
        <item>Rivers</item>
        <item>Sokoto</item>
        <item>Taraba</item>
        <item>Yobe</item>
        <item>Zamfara</item>
    </string-array>
    <string-array name="Abia">
        <item>Aba North</item>
        <item>Aba South</item>
        <item>Aruppe</item>
        <item>Bende</item>
        <item>Ikwuano</item>
        <item>Isiala Ngwa North</item>
        <item>Isiala Ngwa South</item>
        <item>Isuikwuato</item>
        <item>Obi Ngwa</item>
        <item>Ohafia</item>
        <item>Osisioma Ngwa</item>
        <item>Ugwunagbo</item>
        <item>Ukwa East</item>
        <item>Ukwa West</item>
        <item>Umuahia North</item>
        <item>Umuahia South</item>
        <item>Umu Nneochi</item>
    </string-array>
    <string-array name="Adamawa">
        <item>Demsa</item>
        <item>Fufore</item>
        <item>Ganye</item>
        <item>Girei</item>
        <item>Gombi</item>
        <item>Guyuk</item>
        <item>Hong</item>
        <item>Jada</item>
        <item>Lamurde</item>
        <item>Madagali</item>
        <item>Maiha</item>
        <item>Mayo-Belwa</item>
        <item>Michika</item>
        <item>Mubi North</item>
        <item>Mubi South</item>
        <item>Numan</item>
        <item>Shelleng</item>
        <item>Song</item>
        <item>Toungo</item>
        <item>Yola North</item>
        <item>Yola South</item>
    </string-array>
    <string name="Akwa">Akwa Ibom</string>
    <string-array name="Anambra">
        <item>Aguta</item>
        <item>Awka North</item>
        <item>Awka East</item>
        <item>Anambra East</item>
        <item>Anambra West</item>
        <item>Anaocha</item>
        <item>Ayamelum</item>
        <item>Dunukofia</item>
        <item>Ekwusigo</item>
        <item>Idemili North</item>
        <item>Idemili South</item>
        <item>Ihiala</item>
        <item>Njikoka</item>
        <item>Nnewi North</item>
        <item>Nnewi South</item>
        <item>Ogbaru</item>
        <item>Onitsha North</item>
        <item>Onitsha South</item>
        <item>Orumba North</item>
        <item>Orumba South</item>
        <item>Oyi</item>
    </string-array>
    <string-array name="Bauchi">
        <item>Alkaleri</item>
        <item>Bauchi</item>
        <item>Bogoro</item>
        <item>Damban</item>
        <item>Darazo</item>
        <item>Dass</item>
        <item>Gamawa</item>
        <item>Ganjuwa</item>
        <item>Giade</item>
        <item>Itas/Gadau</item>
        <item>Jama\'are</item>
        <item>Katagum</item>
        <item>Kirfi</item>
        <item>Misau</item>
        <item>Shira</item>
        <item>Tafawa Balewa</item>
        <item>Toro</item>
        <item>Warji</item>
        <item>Zaki</item>
    </string-array>
    <string-array name="Bayelsa">
        <item>Brass</item>
        <item>Ekeremor</item>
        <item>Kolokuma/Opokuma</item>
        <item>Nembe</item>
        <item>Ogbia</item>
        <item>Sagbama</item>
        <item>Southern Ijaw</item>
        <item>Yenagoa</item>
    </string-array>
    <string-array name="Benue">
        <item>Ado</item>
        <item>Agatu</item>
        <item>Apa</item>
        <item>Buruku</item>
        <item>Gboko</item>
        <item>Guma</item>
        <item>Gwer East</item>
        <item>Gwer West</item>
        <item>Katsina-Ala</item>
        <item>Konshisha</item>
        <item>Kwande</item>
        <item>Logo</item>
        <item>Makurdi</item>
        <item>Obi</item>
        <item>Ogbadibo</item>
        <item>Ohimini</item>
        <item>Oju</item>
        <item>Okpokwu</item>
        <item>Oturkpo</item>
        <item>Tarka</item>
        <item>Ukum</item>
        <item>Ushongo</item>
        <item>Vandeikya</item>
    </string-array>
    <string-array name="Borno">
        <item>Abadam</item>
        <item>Askira/Uba</item>
        <item>Bama</item>
        <item>Bayo</item>
        <item>Biu</item>
        <item>Chibok</item>
        <item>Damboa</item>
        <item>Dikwa</item>
        <item>Gubio</item>
        <item>Guzamala</item>
        <item>Gwoza</item>
        <item>Hawul</item>
        <item>Jere</item>
        <item>Kaga</item>
        <item>Kala/Balge</item>
        <item>Konduga</item>
        <item>Kukawa</item>
        <item>Kwaya Kusar</item>
        <item>Mafa</item>
        <item>Magumeri</item>
        <item>Maiduguri</item>
        <item>Marte</item>
        <item>Mobbar</item>
        <item>Monguno</item>
        <item>Ngala</item>
        <item>Nganzai</item>
        <item>Shani</item>
    </string-array>
    <string-array name="Cross_River">
        <item>Abi</item>
        <item>Akamkpa</item>
        <item>Akpabuyo</item>
        <item>Bakassi</item>
        <item>Bekwarra</item>
        <item>Biase</item>
        <item>Boki</item>
        <item>Calabar Municipal</item>
        <item>Calabar South</item>
        <item>Etung</item>
        <item>Ikom</item>
        <item>Obanliku</item>
        <item>Obubra</item>
        <item>Obudu</item>
        <item>Odukpani</item>
        <item>Ogoja</item>
        <item>Yakurr</item>
        <item>Yala</item>
    </string-array>
    <string-array name="Delta">
        <item>Aniocha North</item>
        <item>Aniocha South</item>
        <item>Bomadi</item>
        <item>Burutu</item>
        <item>Ethiope East</item>
        <item>Ethiope West</item>
        <item>Ika North East</item>
        <item>Ika South</item>
        <item>Isoko North</item>
        <item>Isoko South</item>
        <item>Ndokwa East</item>
        <item>Ndokwa West</item>
        <item>Okpe</item>
        <item>Oshimili North</item>
        <item>Oshimili South</item>
        <item>Patani</item>
        <item>Sapele</item>
        <item>Udu</item>
        <item>Ughelli North</item>
        <item>Ughelli South</item>
        <item>Ukwuani</item>
        <item>Uvwie</item>
        <item>Warri North</item>
        <item>Warri South</item>
        <item>Warri South West</item>
    </string-array>
    <string-array name="Ebonyi">
        <item>Abakaliki</item>
        <item>Afikpo North</item>
        <item>Afikpo South(Edda)</item>
        <item>Ebonyi</item>
        <item>Ezza North</item>
        <item>Ezza South</item>
        <item>Ikwo</item>
        <item>Ishielu</item>
        <item>Ivo</item>
        <item>Izzi</item>
        <item>Ohaozara</item>
        <item>Ohaukwu</item>
        <item>Onicha</item>
    </string-array>
    <string-array name="Edo">
        <item>Akoko-Edo</item>
        <item>Egor</item>
        <item>Egor</item>
        <item>Esan Central</item>
        <item>Esan North-East</item>
        <item>Esan South-East</item>
        <item>Esan West</item>
        <item>Etsako East</item>
        <item>Etsako West</item>
        <item>Igueben</item>
        <item>Ikpoba Okha</item>
        <item>Orhionmwon</item>
        <item>Oredo</item>
        <item>Ovia North-East</item>
        <item>Ovia North-West</item>
        <item>Owan East</item>
        <item>Owan West</item>
        <item>Uhunmwonde</item>
        <item>Uhunmwonde</item>
    </string-array>
    <string-array name="Ekiti">
        <item>Ado Ekiti</item>
        <item>Efon</item>
        <item>Ekiti East</item>
        <item>Ekiti South-West</item>
        <item>Ekiti West</item>
        <item>Emure</item>
        <item>Gbonyin</item>
        <item>ido Osi</item>
        <item>Ijero</item>
        <item>Ikere</item>
        <item>Ikole</item>
        <item>Ilejemeje</item>
        <item>Irepodun/Ifelodun</item>
        <item>Ise/Orun</item>
        <item>Moba</item>
        <item>Oye</item>
    </string-array>
    <string-array name="Enugu">
        <item>Aninri</item>
        <item>Awgu</item>
        <item>Enugu East</item>
        <item>Enugu South</item>
        <item>Ezeagu</item>
        <item>Igbo Etiti</item>
        <item>Igbo Eze North</item>
        <item>Igbo Eze South</item>
        <item>Isi Uzo</item>
        <item>Nkanu East</item>
        <item>Nkanu West</item>
        <item>Nsukka</item>
        <item>Oji River</item>
        <item>Udenu</item>
        <item>Udi</item>
        <item>Uzo-Uwani</item>
    </string-array>
    <string-array name="Gombe">
        <item>Akko</item>
        <item>Balanga</item>
        <item>Billiri</item>
        <item>Dukku</item>
        <item>Funakaye</item>
        <item>Gombe</item>
        <item>Kaltungo</item>
        <item>Kwami</item>
        <item>Nafada</item>
        <item>Shongom</item>
        <item>Yamaltu/Deba</item>
    </string-array>
</resources>